ダイアログとログ周りの修正

--- a/index.html
+++ b/index.html
@@ -307,6 +307,14 @@
     <button @click="ok_click">OK</button>
 </dialog>
 
+<dialog id="Event_or_state">
+    <p>作るのはイベント？状態？</p>
+
+    <button id="selecting_event">イベント</button>
+    <button id="selecting_state">状態</button>
+
+</dialog>
+
 <dialog id="change_state">
     <p>状態の内容</p>
     <p>時間</p>
